@@ -52,6 +52,7 @@ extern void ecl_init_env(cl_env_ptr);
 extern void init_lib_LSP(cl_object);
 
 extern cl_env_ptr _ecl_alloc_env(void);
+extern void _ecl_dealloc_env(cl_env_ptr);
 
 /* alloc.d/alloc_2.d */
 
